Fix rows not stretching due to flex bug in old versions of Safari (8.x)
Safari 8 is affected by https://github.com/philipwalton/flexbugs#flexbug-12,
where inline elements are not treated as flex items. This seems to have been
fixed by Safari 9.

--- a/srcjs/react-table.v2.css
+++ b/srcjs/react-table.v2.css
@@ -57,7 +57,7 @@
 
 .ReactTable .rt-tr {
   flex: 1 0 auto;
-  display: inline-flex;
+  display: flex;
 }
 
 .ReactTable .rt-th,
